--- a/final/app/index.html
+++ b/final/app/index.html
@@ -4,6 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS 419 Application</title>
  
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
