--- a/final/app/index.html
+++ b/final/app/index.html
@@ -25,6 +25,9 @@
  
     <!-- main -->
     <main ui-view></main>
+	<p><button onclick="geoFindMe()">Show my location</button></p>
+	<div id="out"></div>
+	<script src="geoscript.js"></script>
  
     <!-- footer -->
     <footer></footer>
