--- a/final/app/index.html
+++ b/final/app/index.html
@@ -16,6 +16,7 @@
         <ul class="nav nav-tabs">
             <li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
             <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
+			<li ng-class="{active: activeTab === 'place'}"><a ui-sref="place">Places</a></li>
             <li><a href="/login" target="_self">Logout</a></li>
         </ul>
         <div class="flash-message" ng-if="flash">
