--- a/final/app/index.html
+++ b/final/app/index.html
@@ -44,5 +44,6 @@
     <script src="app-services/flash.service.js"></script>
     <script src="home/index.controller.js"></script>
     <script src="account/index.controller.js"></script>
+	<script src="place/index.controller.js"></script>
 </body>
 </html>
