moving findlocation into place, logging user id to console

--- a/final/app/place/index.html
+++ b/final/app/place/index.html
@@ -1,4 +1,9 @@
 <h1>Places</h1>
+
+<p><button onclick="geoFindMe()">Show my location</button></p>
+<div id="out"></div>
+<script src="geoscript.js"></script>
+
 <div class="form-container">
     <form method="post">
         <div class="form-group">
